recursion.logo.koch.SquareKoch.scala.error
Compilation error:
SquareKoch:18: error: not found: value snowSide
  snowSide(levels-1,length/4)
  ^SquareKoch:20: error: not found: value snowSide
  snowSide(levels-1,length/4)
  ^SquareKoch:22: error: not found: value snowSide
  snowSide(levels-1,length/4)
  ^SquareKoch:24: error: not found: value snowSide
  snowSide(levels-1,length/4)
  ^