recursion.logo.koch.SquareKoch.scala.code
def snowSquare (levels:Int, length:Double) {
    squareSide(levels, length);
    right(90);
    setColor(Color.blue);
    squareSide(levels, length);
    right(90);
    setColor(Color.orange);
    squareSide(levels, length);
    right(90);
    setColor(Color.magenta);
    squareSide(levels, length);
    right(90);
}
def squareSide(levels:Int, length:Double) {
  if(levels==0){
    forward(length)
  }else{
  snowSide(levels-1,length/4)
  left(90)
  snowSide(levels-1,length/4)
  right(180)
  snowSide(levels-1,length/4)
	left(90)
  snowSide(levels-1,length/4)
  }
}